{
    "name": "GaryInput",
    "maps": [
        {
            "name": "Test_Input",
            "id": "1565aebc-39bd-4832-849f-fcfa7341d432",
            "actions": [
                {
                    "name": "StartButton",
                    "id": "cf8d0a6a-a18c-471e-aa90-bfcb4ceb7707",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Move",
                    "id": "bee6a053-255c-42af-8034-9d3bf4dded61",
                    "expectedControlLayout": "Stick",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Camera",
                    "id": "9391dab8-7850-4468-9085-22eb9a906294",
                    "expectedControlLayout": "Stick",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "LeftArm",
                    "id": "6b372ef0-69f6-48bb-b4a9-40a5438dd530",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "RightArm",
                    "id": "b88e3469-cdf2-4bee-b6ab-ac7e8288434b",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartButton",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftArm",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightArm",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": []
}